# activitywatch-firtal

./: CLAUDE.md  PLAN-process-mining-refactor.md  RALPH-PROMPT.md  aw.spec
aw-webui-next/: package-lock.json  package.json
aw-webui-next/src/app/: layout.tsx  page.tsx
aw-webui-next/src/app/events/: page.tsx
aw-webui-next/src/app/objects/: page.tsx
aw-webui-next/src/app/objects/training/: page.tsx
aw-webui-next/src/app/processes/: page.tsx
aw-webui-next/src/app/processes/[id]/: page.tsx
aw-webui-next/src/app/settings/: page.tsx
aw-webui-next/src/app/settings/detection/: page.tsx
aw-webui-next/src/app/settings/llm/: page.tsx
aw-webui-next/src/components/: decision-prompt.tsx  event-list.tsx  nav.tsx  object-confirmation.tsx  pattern-editor.tsx  process-graph.tsx  prompt-queue.tsx
aw-webui-next/src/components/ui/: radio-group.tsx
aw-webui-next/src/lib/: aw-client.ts
aw-webui-next/src/types/: cytoscape-dagre.d.ts
decision-trace/: README.md  pyproject.toml
decision-trace/decision_trace/: __init__.py  client.py  ecommerce.py  models.py  store.py
decision-trace/examples/: basic_usage.py  ecommerce_demo.py
decision-trace/tests/: __init__.py  test_client.py  test_models.py  test_store.py
media/logo/: logo.icns
scripts/: notarize.sh
