[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-trace"
version = "0.1.0"
description = "Task tracking and decision tracing framework for ecommerce, built on ActivityWatch concepts"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Company", email = "dev@yourcompany.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: Office/Business",
]
keywords = ["decision-tracing", "audit-log", "ecommerce", "activity-tracking", "observability"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourcompany/decision-trace"
Documentation = "https://github.com/yourcompany/decision-trace#readme"
Repository = "https://github.com/yourcompany/decision-trace"

[tool.setuptools.packages.find]
where = ["."]
include = ["decision_trace*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=decision_trace --cov-report=term-missing"
